Now with borders

--- a/Hangoverhtml.html
+++ b/Hangoverhtml.html
@@ -6,6 +6,7 @@
     <link href="beer.png" rel="icon">
     <link rel="stylesheet" href="HangoverCSS.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,900i&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="header">
@@ -28,8 +29,8 @@
             <label for="sex">
                 <select name="sex" id="sex" class="drink-input" required>
                     Sex
-                    <option value="male">Male</option>
-                    <option value="female">Female</option>
+                    <option value="male" class="sel-opt">Male</option>
+                    <option value="female" class="sel-opt">Female</option>
                 </select>
             </label>
                                 <!-- Enter number of drinks -->
