1st version adding up values programmatically
1st version adding up values programmatically

--- a/hangoverBackup.html
+++ b/hangoverBackup.html
@@ -20,7 +20,7 @@
                             <!-- Enter Age and Weight -->
 
             <label for="age" class="drink-label"> Please enter your age:
-                    <input type="number" id="age" class="drink-input" name="" min="21" max="120" placeholder="21" autofocus>
+                    <input type="number" id="age" class="drink-input" name="amount" min="21" max="120" placeholder="21" autofocus>
             </label>
 
             <label for="weight"> Please enter your weight and sex:
@@ -38,31 +38,31 @@
         <h2>So, exactly <span class="how-much">how much</span> did you drink tonight?</h2>
        <div id="drink-div">
             <label for="shot" class="drink-label"> Shots:
-                <input type="number" id="shot" class="drink-input drink-adder" name="100"  min="0" placeholder="0">
+                <input type="number" id="shot" class="drink-input drink-adder" name="amount"  min="0" placeholder="0" value="100">
              </label>
              <label for="beerCan" class="drink-label"> Cans/Bottles of Beer:
-                <input type="number" id="beerCan" class="drink-input drink-adder" name="100" min="0" placeholder="0">
+                <input type="number" id="beerCan" class="drink-input drink-adder" name="amount" min="0" placeholder="0" value="100">
             </label>
             <label for="beerPint" class="drink-label">  Pints of Beer:   
-                <input type="number" id="beerPint" class="drink-input drink-adder" name="125" min="0" placeholder="0">
+                <input type="number" id="beerPint" class="drink-input drink-adder" name="amount" min="0" placeholder="0" value="125">
             </label>   
             <label for="craftBeerCan" class="drink-label"> Cans/Bottles of Craft Beer:
-                <input type="number" id="craftBeerCan" class="drink-input drink-adder" name="125" min="0" placeholder="0">
+                <input type="number" id="craftBeerCan" class="drink-input drink-adder" name="amount" min="0" placeholder="0" value="125">
             </label>
             <label for="craftBeerPint" class="drink-label"> Pints of Craft Beer: 
-                <input type="number" id="craftBeerPint" class="drink-input drink-adder" name="150" min="0" placeholder="0">
+                <input type="number" id="craftBeerPint" class="drink-input drink-adder" name="amount" min="0" placeholder="0" value="150">
             </label>
             <label for="wineGlass" class="drink-label"> Glasses of Wine:   
-                <input type="number" id="wineGlass" class="drink-input drink-adder" name="100" min="0" placeholder="0">
+                <input type="number" id="wineGlass" class="drink-input drink-adder" name="amount" min="0" placeholder="0" value="100">
             </label> 
             <label for="mixedDrink" class="drink-label">  Mixed Drinks: 
-                <input type="number" id="mixedDrink" class="drink-input drink-adder" name="100" min="0" placeholder="0">
+                <input type="number" id="mixedDrink" class="drink-input drink-adder" name="amount" min="0" placeholder="0" value="100">
             </label> 
             <label for="cocktail" class="drink-label">  Cocktails: 
-                <input type="number" id="cocktail" class="drink-input drink-adder" name="100" min="0" placeholder="0">
+                <input type="number" id="cocktail" class="drink-input drink-adder" name="amount" min="0" placeholder="0" value="100">
             </label>    
             <label for="cocktailStrong" class="drink-label"> Strong Cocktails:
-                <input type="number" id="cocktailStrong" class="drink-input drink-adder" name="150" min="0" placeholder="0">
+                <input type="number" id="cocktailStrong" class="drink-input drink-adder" name="amount" min="0" placeholder="0" value="150">
             </label>
         </div>
             <label for="bellyFull" class="eat-drink">Did you have a full meal before drinking? 
